Fix OutputControllerStartupSuccess logic.

This CL moves the counter/timer into ErrorStatisticsTracker so that the
counter is appropriately reset every time the stream is recreated. Also
fixes an issue where the CallbackError stats were logged per play/pause
cycle, rather than per stream.

BUG=766677

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I16e5dc10d14bbe766de467174a9ee4a3c438bf47
Reviewed-on: https://chromium-review.googlesource.com/697426
Commit-Queue: Max Morin <maxmorin@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507028}
Former-commit-id: 14c300ce60477c08297a3a2ea737dc7a7fab53d3