media/audio/audio_output_controller.cc
@@ -15,7 +15,6 @@
 #include "base/strings/stringprintf.h"
 #include "base/task_runner_util.h"
 #include "base/threading/platform_thread.h"
-#include "base/time/time.h"
 #include "base/trace_event/trace_event.h"
 #include "media/base/audio_timestamp_helper.h"
 
@@ -53,7 +52,14 @@ void LogStreamCreationResult(bool for_device_change,
 
 }  // namespace
 
-AudioOutputController::ErrorStatisticsTracker::ErrorStatisticsTracker() {}
+AudioOutputController::ErrorStatisticsTracker::ErrorStatisticsTracker()
+    : on_more_io_data_called_(0) {
+  // WedgeCheck() will look to see if |on_more_io_data_called_| is true after
+  // the timeout expires and log this as a UMA stat. If the stream is
+  // paused/closed before the timer fires, nothing is logged.
+  wedge_timer_.Start(FROM_HERE, TimeDelta::FromSeconds(5), this,
+                     &ErrorStatisticsTracker::WedgeCheck);
+}
 
 AudioOutputController::ErrorStatisticsTracker::~ErrorStatisticsTracker() {
   UMA_HISTOGRAM_BOOLEAN("Media.AudioOutputController.CallbackError",
@@ -62,6 +68,20 @@ AudioOutputController::ErrorStatisticsTracker::~ErrorStatisticsTracker() {
 
 void AudioOutputController::ErrorStatisticsTracker::RegisterError() {
   error_during_callback_ = true;
+}
+
+void AudioOutputController::ErrorStatisticsTracker::OnMoreDataCalled() {
+  // Indicate that we haven't wedged (at least not indefinitely, WedgeCheck()
+  // may have already fired if OnMoreData() took an abnormal amount of time).
+  // Since this thread is the only writer of |on_more_io_data_called_| once the
+  // thread starts, it's safe to compare and then increment.
+  if (on_more_io_data_called_.IsZero())
+    on_more_io_data_called_.Increment();
+}
+
+void AudioOutputController::ErrorStatisticsTracker::WedgeCheck() {
+  UMA_HISTOGRAM_BOOLEAN("Media.AudioOutputControllerPlaybackStartupSuccess",
+                        on_more_io_data_called_.IsOne());
 }
 
 AudioOutputController::AudioOutputController(
@@ -84,7 +104,6 @@ AudioOutputController::AudioOutputController(
       power_monitor_(
           params.sample_rate(),
           TimeDelta::FromMilliseconds(kPowerMeasurementTimeConstantMillis)),
-      on_more_io_data_called_(0),
       weak_factory_for_errors_(this) {
   DCHECK(audio_manager);
   DCHECK(handler_);
@@ -216,25 +235,9 @@ void AudioOutputController::DoPlay() {
     last_audio_level_log_time_ = base::TimeTicks::Now();
   }
 
-  stream_->Start(this);
-
   stats_tracker_.emplace();
 
-  // For UMA tracking purposes, start the wedge detection timer.  This allows us
-  // to record statistics about the number of wedged playbacks in the field.
-  //
-  // WedgeCheck() will look to see if |on_more_io_data_called_| is true after
-  // the timeout expires.  Care must be taken to ensure the wedge check delay is
-  // large enough that the value isn't queried while OnMoreDataIO() is setting
-  // it.
-  //
-  // Timer self-manages its lifetime and WedgeCheck() will only record the UMA
-  // statistic if state is still kPlaying.  Additional Start() calls will
-  // invalidate the previous timer.
-  wedge_timer_.reset(new base::OneShotTimer());
-  wedge_timer_->Start(
-      FROM_HERE, TimeDelta::FromSeconds(5), this,
-      &AudioOutputController::WedgeCheck);
+  stream_->Start(this);
 
   handler_->OnControllerPlaying();
 }
@@ -243,8 +246,8 @@ void AudioOutputController::StopStream() {
   DCHECK(message_loop_->BelongsToCurrentThread());
 
   if (state_ == kPlaying) {
-    wedge_timer_.reset();
     stream_->Stop();
+    stats_tracker_.reset();
 
     if (will_monitor_audio_levels()) {
       LogAudioPowerLevel("StopStream");
@@ -287,8 +290,6 @@ void AudioOutputController::DoClose() {
     DoStopCloseAndClearStream();
     sync_reader_->Close();
     state_ = kClosed;
-
-    stats_tracker_.reset();
   }
 }
 
@@ -315,8 +316,8 @@ void AudioOutputController::DoReportError() {
   TRACE_EVENT0("audio", "AudioOutputController::DoReportError");
   DLOG(ERROR) << "AudioOutputController::DoReportError";
   if (state_ != kClosed) {
-    DCHECK(stats_tracker_);
-    stats_tracker_->RegisterError();
+    if (stats_tracker_)
+      stats_tracker_->RegisterError();
     handler_->OnControllerError();
   }
 }
@@ -327,12 +328,7 @@ int AudioOutputController::OnMoreData(base::TimeDelta delay,
                                       AudioBus* dest) {
   TRACE_EVENT0("audio", "AudioOutputController::OnMoreData");
 
-  // Indicate that we haven't wedged (at least not indefinitely, WedgeCheck()
-  // may have already fired if OnMoreData() took an abnormal amount of time).
-  // Since this thread is the only writer of |on_more_io_data_called_| once the
-  // thread starts, its safe to compare and then increment.
-  if (on_more_io_data_called_.IsZero())
-    on_more_io_data_called_.Increment();
+  stats_tracker_->OnMoreDataCalled();
 
   sync_reader_->Read(dest);
 
@@ -420,6 +416,7 @@ void AudioOutputController::DoStopCloseAndClearStream() {
 
     StopStream();
     stream_->Close();
+    stats_tracker_.reset();
 
     if (stream_ == diverting_to_stream_)
       diverting_to_stream_ = NULL;
@@ -562,16 +559,6 @@ void AudioOutputController::DoStopDuplicating(AudioPushSink* to_stream) {
 std::pair<float, bool> AudioOutputController::ReadCurrentPowerAndClip() {
   DCHECK(will_monitor_audio_levels());
   return power_monitor_.ReadCurrentPowerAndClip();
-}
-
-void AudioOutputController::WedgeCheck() {
-  DCHECK(message_loop_->BelongsToCurrentThread());
-
-  // If we should be playing and we haven't, that's a wedge.
-  if (state_ == kPlaying) {
-    UMA_HISTOGRAM_BOOLEAN("Media.AudioOutputControllerPlaybackStartupSuccess",
-                          on_more_io_data_called_.IsOne());
-  }
 }
 
 }  // namespace media
