media/audio/audio_output_controller.h
@@ -18,13 +18,13 @@
 #include "base/memory/weak_ptr.h"
 #include "base/optional.h"
 #include "base/threading/thread_checker.h"
+#include "base/time/time.h"
 #include "base/timer/timer.h"
 #include "build/build_config.h"
 #include "media/audio/audio_io.h"
 #include "media/audio/audio_manager.h"
 #include "media/audio/audio_power_monitor.h"
 #include "media/audio/audio_source_diverter.h"
-#include "media/audio/simple_sources.h"
 #include "media/base/media_export.h"
 
 // An AudioOutputController controls an AudioOutputStream and provides data
@@ -194,19 +194,31 @@ class MEDIA_EXPORT AudioOutputController
   ~AudioOutputController() override;
 
  private:
-  // Used to store various stats about a stream. The lifetime of this object
-  // should be that of a single stream, from Play to Close. TODO(maxmorin):
-  // Move wedge checking code to this class, see also crbug.com/766677.
+  // Used to store various stats about a stream. The lifetime of this object is
+  // from play until pause. The underlying physical stream may be changed when
+  // resuming playback, hence separate stats are logged for each play/pause
+  // cycle.
   class ErrorStatisticsTracker {
    public:
     ErrorStatisticsTracker();
+
+    // Note: the destructor takes care of logging all of the stats.
     ~ErrorStatisticsTracker();
 
     // Called to indicate an error callback was fired for the stream.
     void RegisterError();
 
+    // This function should be called from the stream callback thread.
+    void OnMoreDataCalled();
+
    private:
+    void WedgeCheck();
+
     bool error_during_callback_ = false;
+
+    // Flags when we've asked for a stream to start but it never did.
+    base::AtomicRefCount on_more_io_data_called_;
+    base::OneShotTimer wedge_timer_;
   };
 
   AudioOutputController(AudioManager* audio_manager, EventHandler* handler,
@@ -231,9 +243,6 @@ class MEDIA_EXPORT AudioOutputController
 
   // Helper method that stops, closes, and NULLs |*stream_|.
   void DoStopCloseAndClearStream();
-
-  // Checks if a stream was started successfully but never calls OnMoreData().
-  void WedgeCheck();
 
   // Send audio data to each duplication target.
   void BroadcastDataToDuplicationTargets(std::unique_ptr<AudioBus> audio_bus,
@@ -279,11 +288,10 @@ class MEDIA_EXPORT AudioOutputController
   // Updated each time a power measurement is logged.
   base::TimeTicks last_audio_level_log_time_;
 
+  // Used for keeping track of and logging stats. Created when a stream starts
+  // and destroyed when a stream stops. Also reset every time there is a stream
+  // being created due to device changes.
   base::Optional<ErrorStatisticsTracker> stats_tracker_;
-
-  // Flags when we've asked for a stream to start but it never did.
-  base::AtomicRefCount on_more_io_data_called_;
-  std::unique_ptr<base::OneShotTimer> wedge_timer_;
 
   // WeakPtrFactory and WeakPtr for ignoring errors which occur arround a
   // Stop/Close cycle; e.g., device changes. These errors are generally harmless
